--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <div id="subscribe">
             <h5>(forgot to mention)</h5>
-            <h3>Do connect with me on linkedIn <i class="ri-arrow-right-up-line"></i></h3>
+            <h3 href="https://www.linkedin.com/in/ritik-raj-prasad-1531a821b/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3Boa4PbwowRKqOrZ2KefddZw%3D%3D">Do connect with me on linkedIn <i class="ri-arrow-right-up-line"></i></h3>
         </div>
         <div id="footer">
             <div id="footerleft">
@@ -83,7 +83,7 @@
                 <a href="#">facebook</a>
                 <a href="#">instagram</a>
                 <a href="#">twitter</a>
-                <a href="#">linkedIn</a>
+                <a href="https://www.linkedin.com/in/ritik-raj-prasad-1531a821b/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3Boa4PbwowRKqOrZ2KefddZw%3D%3D">linkedIn</a>
             </div>
         </div>
     </div>
